--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
   body {
     margin: 0;
-    font-family: cursive;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
 
   /* Navigation bar CSS */
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: transparent;
     margin: 0;
   }
   
@@ -15,18 +15,19 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    padding: 14px 84.35px;
+    text-decoration: overline;
+    font-size: 20px;
   }
   
   .topnav a:hover {
-    background-color: rgb(190, 9, 9);
-    color: black;
+    background-color: rgba(204, 0, 255, 0.801);
+    color: white;
+    opacity: 0.8;
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #00b7ff;
     color: white;
   }
   
@@ -62,19 +63,19 @@
     overflow: hidden;
     display: block;
     text-align: center;
-    background-color: #333;
+    background-color: rgb(#333);
   }
 
   /* Content CSS */
   .content {
     margin-left: 0%;
     margin-right: 0%;
-    margin-top: 0%;
+    margin-top: -4%;
     padding: 5%;
     text-align: center;
-    background-image: url('images/davey.PNG');
+    background-image: url('images/baggrund.jpg');
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: local;
     background-size: cover;
     min-height: 100vh;
     color: white;
@@ -120,7 +121,7 @@
   }
   
   .content .element h2 {
-    text-align: left;
+    text-align: center;
   }
 
  .content .left {
@@ -141,6 +142,10 @@
       float: none;
       max-width: 80%;
     } 
+  }
+
+  .content .element h3 {
+    float: right;
   }
 
   #profile-picture {
@@ -171,13 +176,14 @@
   }
   
   .panel {
-    padding: 0 18px;
-    background-color: transparent;
+    padding: 0 15px;
+    background-color: grey;
+    background: rgba(0, 0, 0, 0.5);
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    transition: max-height 0.5s ease-out;
   }
 
   h2.tekst {
-    text-align: center;
+    text-align: left;
   }
