--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@
   text-transform:none;
   font-weight:400;
   color:#ffffff;
-  background-color:#3369ff;
+  background-color:#aa17c7;
   box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
   text-align:center;
   position:relative;
